--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <script rel="stylesheet" src="./js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +10,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <button type="button" class="btn btn-primary">Primary</button>
 </body>
 </html>
